--- a/Views/adminViews/addCategory.ejs
+++ b/Views/adminViews/addCategory.ejs
@@ -26,7 +26,7 @@
               </div>
               <div class="form-group">
                 <label for="exampleTextarea1">Description</label>
-                <textarea class="form-control" id="description" rows="4" name="des" onkeyup="descriptionValidation()"></textarea>
+                <textarea class="form-control" id="description" rows="4" name="description" onkeyup="descriptionValidation()"></textarea>
                 <span id="description-error" class="validation-label"></span>
               </div>
               <% if (typeof message !== 'undefined') { %>
