--- a/Views/userViews/forgotPasswordNum.ejs
+++ b/Views/userViews/forgotPasswordNum.ejs
@@ -1,100 +1,81 @@
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
-	<meta name="author" content="CodePixar">
-	<!-- Meta Description -->
-	<meta name="description" content="">
-	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
-	<!-- meta character set -->
-	<meta charset="UTF-8">
-	<!-- Site Title -->
-	<title>forgot password(num)</title>
-	<!--CSS============================================= -->
-	<link rel="stylesheet" href="css/linearicons.css">
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/nice-select.css">
-	<link rel="stylesheet" href="css/nouislider.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/main.css">
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="CodePixar">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>ProGear</title>
+    <!--CSS============================================= -->
+    <link rel="stylesheet" href="css/linearicons.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nice-select.css">
+    <link rel="stylesheet" href="css/nouislider.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<!-- Start Header Area -->
-	<header class="header_area sticky-header">
-	</header>
+    <!-- Start Header Area -->
+    <header class="header_area sticky-header">
+    </header>
 
+    <!--================Login Box Area =================-->
+    <section class="login_box_area section_gap">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-8">
+                    <div class="login_form_inner">
+                        <h3>Enter your Phone Number</h3>
+                        <form class="row login_form" action="/forgotPasswordNum" method="POST" id="contactForm" novalidate="novalidate" style="margin-bottom: 50px;">
+                            <div class="col-12 form-group">
+                                <input type="number" class="form-control" id="number" name="number" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
+                            </div>
+                            <div class="col-12 form-group">
+                                <% if (typeof message !== 'undefined') { %>
+                                <center>
+                                    <div class="audun_warn">
+                                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                                        <%= message %>
+                                    </div>
+                                </center>
+                                <% } %>
+                            </div>
+                            <div class="col-12 form-group">
+                                <button type="submit" value="submit" class="primary-btn">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End Login Box Area =================-->
 
-
-
-
-
-	<!--================Login Box Area =================-->
-<section class="login_box_area section_gap">
-  <div class="container">
-    <div style="margin-left: 250px; margin-right: 250px;">
-      <div class="login_form_inner">
-        <h3>Enter your Phone Number</h3>
-        <form class="row login_form" action="/forgotPasswordNum" method="POST" id="contactForm" novalidate="novalidate">
-          <div class="col-md-12 form-group">
-            <input type="number" class="form-control" id="number" name="number" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
-          </div>
-          <div class="col-md-12 form-group">
-            <% if (message) { %>
-            <center>
-              <div class="audun_warn">
-                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                <%= message %>
-              </div>
-            </center>
-            <% } %>
-          </div>
-          <div class="col-md-12 form-group">
-            <button type="submit" value="submit" class="primary-btn">Submit</button>
-            <%-- <a href="/forgotPasswordNum">Forgot Password?</a> --%>
-          </div>
-        </form>
-        <br><br><br><br>
-      </div>
-    </div>
-  </div>
-</section>
-
-	<!--================End Login Box Area =================-->
-
-
-
-
-
-
-
-
-	<!-- start footer Area -->
-       <%- include('../layouts/userFooter.ejs') %>
-
-	<!-- End footer Area -->
-
-
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
+    <script src="js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+     crossorigin="anonymous"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/nouislider.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="js/gmaps.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
