--- a/Views/userViews/setNewPassword.ejs
+++ b/Views/userViews/setNewPassword.ejs
@@ -1,198 +1,185 @@
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
-	<meta name="author" content="CodePixar">
-	<!-- Meta Description -->
-	<meta name="description" content="">
-	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
-	<!-- meta character set -->
-	<meta charset="UTF-8">
-	<!-- Site Title -->
-	<title>forgot password(num)</title>
-	<!--CSS============================================= -->
-	<link rel="stylesheet" href="css/linearicons.css">
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/nice-select.css">
-	<link rel="stylesheet" href="css/nouislider.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/main.css">
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="CodePixar">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>ProGear</title>
+    <!--CSS============================================= -->
+    <link rel="stylesheet" href="css/linearicons.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nice-select.css">
+    <link rel="stylesheet" href="css/nouislider.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<!-- Start Header Area -->
-	<header class="header_area sticky-header">
-	</header>
+    <!-- Start Header Area -->
+    <header class="header_area sticky-header">
+    </header>
 
+    <!--================Login Box Area =================-->
+    <section class="login_box_area section_gap">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-8">
+                    <div class="login_form_inner">
+                        <h3>Set new Password</h3>
+                        <div class="row">
+                            <div class="col-md-2"></div>
+                            <div class="col-lg-8 col-md-12">
+                                <form class="row login_form" action="/setNewPassword" method="POST" id="myform">
+                                    <div class="col-md-12 form-group">
+                                        <input type="password" class="form-control" id="newpassword" name="newpassword" placeholder="New Password" onkeyup="newPasswordValidation()">
+                                        <span id="newPassword-error" class="validation-label"></span>
+                                    </div>
+                                    <div class="col-md-12 form-group">
+                                        <input type="password" class="form-control" id="confpassword" name="confpassword" placeholder="Confirm Password" onkeyup="confPasswordValidation()">
+                                        <span id="confpassword-error" class="validation-label"></span>
+                                    </div>
+                                    <div class="col-md-12 form-group">
+                                        <% if (typeof message !== 'undefined') { %>
+                                        <center>
+                                        <div class="audun_warn">
+                                            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                                            <%= message %>
+                                        </div>
+                                        </center>
+                                        <% } %>
+                                    </div> 
+                                    <div class="col-md-12 form-group">
+                                        <button type="submit" value="submit" class="primary-btn">Submit</button>
+                                    </div>
+                                    <br>
+                                </form>
+                                <br><br><br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End Login Box Area =================-->
 
+    <script src="js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+     crossorigin="anonymous"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/nouislider.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="js/gmaps.min.js"></script>
+    <script src="js/main.js"></script>
 
-
-
-
-	<!--================Login Box Area =================-->
-	<section class="login_box_area section_gap">
-		<div class="container">
-			<div style="margin-left: 250px; margin-right: 250px;">
-					<div class="login_form_inner ">
-						<h3>Set new Password</h3>
-						<div class="row">
-							<div class="col-3"></div>
-							<div class="col-lg-6-md-12">
-								<form class="row login_form" action="/setNewPassword" method="POST" id="myform"  novalidate="novalidate">
-									<div class="col-md-12 form-group">
-										<input type="password" class="form-control" id="newpassword" name="newpassword" placeholder="New Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'New Password'" onkeyup="newPasswordValidation()">
-										<span id="newPassword-error" class="validation-label"></span>
-									</div>
-									<div class="col-md-12 form-group">
-										<input type="password" class="form-control" id="confpassword" name="confpassword" placeholder="Confirm Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'" onkeyup="confPasswordValidation()">
-										<span id="confpassword-error" class="validation-label"></span>
-									</div>
-									<div class="col-md-12 form-group">
-										<% if (typeof message !== 'undefined') { %>
-										<center>
-										<div class="audun_warn">
-											<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-											<%= message %>
-										</div>
-										</center>
-										<% } %>
-									</div> 
-									<div class="col-md-12 form-group">
-										<button type="submit" value="submit" class="primary-btn">Sumbit</button>
-									</div>
-									<br>
-								</form>
-								<br><br><br>
-
-							</div>
-							
-
-						</div>
-	
-					</div>
-			</div>
-		</div>
-	</section>
-	<!--================End Login Box Area =================-->
-
-	<!-- start footer Area -->
-		
-	<!-- End footer Area -->
-
-
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
-
-	<script>
-		const regex = /^(?!\s*$).+/;
-		const passwordRegex =/^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$/;
-	  
-		const newPasswordError = document.getElementById("newPassword-error");
-		const confpasswordError = document.getElementById("confpassword-error");
-	  
-		const myform = document.getElementById("myform");
-	  
-		function newPasswordValidation() {
-		  const name = document.getElementById("newpassword").value;
-		  const nameInput = document.getElementById("newpassword");
-		  if (name.length == 0) {
-			newPasswordError.innerHTML = "Must not be Empty";
-			newPasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (!name.match(regex)) {
-			newPasswordError.innerHTML = "Must be Valid";
-			newPasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (name.length>50) {
-			newPasswordError.innerHTML = "Password must be less than 50 characters";
-			newPasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (!name.match(passwordRegex)) {
-			newPasswordError.innerHTML = "Password Should Contain atleast 8 characters,one number and a special character";
-			newPasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  newPasswordError.innerHTML = "";
-		  newPasswordError.style.color = "green";
-		  nameInput.style.border = "solid 2px green";
-		  return true;
-		}
-
-		function confPasswordValidation() {
-			const password = document.getElementById("newpassword").value;
-		  const name = document.getElementById("confpassword").value;
-		  const nameInput = document.getElementById("confpassword");
-		  if (name.length == 0) {
-			confpasswordError.innerHTML = "Must not be Empty";
-			confpasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (!name.match(regex)) {
-			confpasswordError.innerHTML = "Must be Valid";
-			confpasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (name.length>50) {
-			confpasswordError.innerHTML = "Password must be less than 50 characters";
-			confpasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (!name.match(passwordRegex)) {
-			confpasswordError.innerHTML = "Password Should Contain atleast 8 characters,one number and a special character";
-			confpasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  if (name!=password) {
-			confpasswordError.innerHTML = "Password does not Match";
-			confpasswordError.style.color = "red";
-			nameInput.style.border = "solid 2px red";
-			return false;
-		  }
-		  confpasswordError.innerHTML = "";
-		  confpasswordError.style.color = "green";
-		  nameInput.style.border = "solid 2px green";
-		  return true;
-		}
-		
-		myform.addEventListener("submit", (event) => {
-		  event.preventDefault();
-		  if (!newPasswordValidation() || !confPasswordValidation() ) {
-			return false;
-		  } else {
-			myform.submit();
-		  }
-		});
-	  </script>
+    <script>
+        const regex = /^(?!\s*$).+/;
+        const passwordRegex = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$/;
+      
+        const newPasswordError = document.getElementById("newPassword-error");
+        const confpasswordError = document.getElementById("confpassword-error");
+      
+        const myform = document.getElementById("myform");
+      
+        function newPasswordValidation() {
+          const name = document.getElementById("newpassword").value;
+          const nameInput = document.getElementById("newpassword");
+          if (name.length == 0) {
+            newPasswordError.innerHTML = "Must not be Empty";
+            newPasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (!name.match(regex)) {
+            newPasswordError.innerHTML = "Must be Valid";
+            newPasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (name.length>50) {
+            newPasswordError.innerHTML = "Password must be less than 50 characters";
+            newPasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (!name.match(passwordRegex)) {
+            newPasswordError.innerHTML = "Password Should Contain at least 8 characters, one number, and a special character";
+            newPasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          newPasswordError.innerHTML = "";
+          newPasswordError.style.color = "green";
+          nameInput.style.border = "solid 2px green";
+          return true;
+        }
   
+        function confPasswordValidation() {
+            const password = document.getElementById("newpassword").value;
+          const name = document.getElementById("confpassword").value;
+          const nameInput = document.getElementById("confpassword");
+          if (name.length == 0) {
+            confpasswordError.innerHTML = "Must not be Empty";
+            confpasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (!name.match(regex)) {
+            confpasswordError.innerHTML = "Must be Valid";
+            confpasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (name.length>50) {
+            confpasswordError.innerHTML = "Password must be less than 50 characters";
+            confpasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (!name.match(passwordRegex)) {
+            confpasswordError.innerHTML = "Password Should Contain at least 8 characters, one number, and a special character";
+            confpasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          if (name!=password) {
+            confpasswordError.innerHTML = "Password does not Match";
+            confpasswordError.style.color = "red";
+            nameInput.style.border = "solid 2px red";
+            return false;
+          }
+          confpasswordError.innerHTML = "";
+          confpasswordError.style.color = "green";
+          nameInput.style.border = "solid 2px green";
+          return true;
+        }
+        
+        myform.addEventListener("submit", (event) => {
+          event.preventDefault();
+          if (!newPasswordValidation() || !confPasswordValidation() ) {
+            return false;
+          } else {
+            myform.submit();
+          }
+        });
+      </script>
 </body>
-
 </html>
+
