--- a/Views/userViews/signup.ejs
+++ b/Views/userViews/signup.ejs
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
     <!-- Mobile Specific Meta -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/fav.png">
     <!-- Author Meta -->
@@ -33,7 +34,7 @@
     <section class="login_box_area section_gap">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6" style="padding: 0%;">
+                <div class="col-md-6" style="padding: 0%;">
                     <div class="login_form_inner">
                         <h3>Signup on the website</h3>
                         <form class="row login_form" action="/signup" method="POST" id="myform">
@@ -70,22 +71,22 @@
                             <div class="col-md-12 form-group">
                                 <button type="submit" value="submit" class="primary-btn">Sign Up</button>
                             </div>
-                        </form>
+                          </form>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-6" style="padding: 0%;">
-                    <div class="login_box_img">
+                    <div class="col-md-6" style="padding: 0%;">
+                        <div class="login_box_img">
                         <img class="img-fluid" src="img/login cover.jpg" alt="">
                         <div class="hover">
                             <h4>Already have an account?</h4>
                             <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
                             <a class="primary-btn" href="/login">Login to your Account</a>
                         </div>
+                      </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     <!--================End Login Box Area =================-->
 
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
