--- a/Views/userViews/checkout.ejs
+++ b/Views/userViews/checkout.ejs
@@ -228,18 +228,18 @@
     
                             <!--==============change address Form  ========================-->
     
-                            <div class="banner-desc" style="margin-left: 50px; margin-top:15px; ">
+                            <div class="banner-desc" style="margin-left: 50px; margin-top:15px; margin-bottom: 30px;">
                                 <a class="button" style="color: #fff;">CHANGE ADDRESS</a>
                             </div>
     
                             <!--==============Add new address Form  ========================-->
     
-                            <div class="banner-desc" style="margin-left: 50px">
+                            <div class="banner-desc" style="margin-left: 47px; margin-bottom: 30px;" >
                                 <section class="intro">
                                     <button class="btn-reply" id="btn">ADD NEW ADDRESS</button>
                                 </section>
                             </div>
-    
+                            
                             <!--======================Close add new address  =======================-->
                             <br><br><br>
                             <div class="col-md-12 form-group">
