--- a/Views/userViews/category.ejs
+++ b/Views/userViews/category.ejs
@@ -42,20 +42,60 @@
 		<br><br><br><br><br><br>
 		<div class="row">
 			<div class="col-xl-3 col-lg-4 col-md-5">
-	
+				<!-- Sidebar with category list -->
 				<div class="sidebar-categories">
 					<div class="head">Browse Categories</div>
 					<ul class="main-categories">
 						<% category.forEach(function(category) { %>
-						<li class="main-nav-list"><a class="nav-link" href="/category?id=<%= category._id %>"><span class="lnr lnr-arrow-right"></span><%= category.name %></a></li>
+						<li class="main-nav-list">
+							<a class="nav-link" href="/category?id=<%= category._id %>">
+								<span class="lnr lnr-arrow-right"></span><%= category.name %>
+							</a>
+						</li>
 						<% }); %>
 					</ul>
 				</div>
-				<br><br><br><br><br><br>
+				<div>
+					<!-- Sidebar with sort options -->
+					<div class="sidebar-categories">
+						<div class="head mt-3">Sort By Price </div>
+						<ul class="main-categories">
+							<li class="main-nav-list">
+								<a class="nav-link" href="/category?sort=price_asc&&id=<%= categoryId %>">
+									<span class="lnr lnr-arrow-right"></span>Low --> high
+								</a>
+							</li>
+							<li class="main-nav-list">
+								<a class="nav-link" href="/category?sort=price_desc&&id=<%= categoryId %>">
+									<span class="lnr lnr-arrow-right"></span>High --> Low
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			<div class="col-xl-9 col-lg-8 col-md-7">
 				<!-- Start Filter Bar -->
 				<div class="filter-bar d-flex flex-wrap align-items-center">
+					<div class="pagination">
+						<% if (currentPage > 1) { %>
+						<a href="/category?page=<%= currentPage - 1 %>&id=<%= categoryId %>" class="prev-arrow">
+							<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+						</a>
+						<% } %>
+						<% for (let i = 1; i <= totalPages; i++) { %>
+						<% if (currentPage === i) { %>
+						<a href="#" class="active"><%= i %></a>
+						<% } else { %>
+						<a href="/category?page=<%= i %>&id=<%= categoryId %>"><%= i %></a>
+						<% } %>
+						<% } %>
+						<% if (currentPage < totalPages) { %>
+						<a href="/category?page=<%= currentPage + 1 %>&id=<%= categoryId %>" class="next-arrow">
+							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						</a>
+						<% } %>
+					</div>
 				</div>
 				<!-- End Filter Bar -->
 				<!-- Start Best Seller -->
@@ -72,7 +112,6 @@
 										<h6>₹<%= product.price %></h6>
 									</div>
 									<div class="prd-bottom">
-	
 										<a class="social-info" onclick="addtocart('<%= product._id %>','<%= product.price %>')">
 											<span class="ti-bag"></span>
 											<p class="hover-text">add to bag</p>
@@ -95,15 +134,31 @@
 				<!-- End Best Seller -->
 				<!-- Start Filter Bar -->
 				<div class="filter-bar d-flex flex-wrap align-items-center">
+					<div class="pagination">
+						<% if (currentPage > 1) { %>
+						<a href="/category?page=<%= currentPage - 1 %>&id=<%= categoryId %>" class="prev-arrow">
+							<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+						</a>
+						<% } %>
+						<% for (let i = 1; i <= totalPages; i++) { %>
+						<% if (currentPage === i) { %>
+						<a href="#" class="active"><%= i %></a>
+						<% } else { %>
+						<a href="/category?page=<%= i %>&id=<%= categoryId %>"><%= i %></a>
+						<% } %>
+						<% } %>
+						<% if (currentPage < totalPages) { %>
+						<a href="/category?page=<%= currentPage + 1 %>&id=<%= categoryId %>" class="next-arrow">
+							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						</a>
+						<% } %>
+					</div>
 				</div>
 				<!-- End Filter Bar -->
 			</div>
 		</div>
 	</div>
-
-			</div>
-		</div>
-	</div>
+	
 	<br><br><br>
 	<!-- start footer Area -->
 	<%- include('../layouts/userFooter.ejs') %>
