--- a/Views/userViews/category.ejs
+++ b/Views/userViews/category.ejs
@@ -99,7 +99,7 @@
 				</div>
 				<!-- End Filter Bar -->
 				<!-- Start Best Seller -->
-				<section class="lattest-product-area pb-40 category-list">
+				<section class="lattest-product-area pb-40 category-list ml-5">
 					<div class="row">
 						<!-- single product -->
 						<% products.forEach(function(product) { %>
